feat: ajout configuration Docker pour MusePose

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-torch==2.0.1
+# torch et torchvision sont installés séparément dans le Dockerfile avec CUDA 11.8
 torchdiffeq==0.2.3
 torchmetrics==1.2.1
-torchsde==0.2.5
-torchvision==0.15.2
+torchsde==0.2.6
 accelerate==0.29.3
 av==11.0.0
 clip @ https://github.com/openai/CLIP/archive/d50d76daa670286dd6cacf3bcd80b5e4823fc8e1.zip#sha256=b5842c25da441d6c581b53a5c60e0c2127ebafe0f746f8e15561a006c6c3be6a
